--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,8 @@ file.reference.jcalendar-1.4.jar-2=C:\\Users\\ASUS X515E\\Downloads\\jcalendar-1
 file.reference.jcalendar-1.4.jar-3=C:\\Users\\User\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-4=C:\\Users\\ASUS\\Downloads\\rar\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-5=C:\\Users\\Jung Ah Ra\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\ASUS\\Downloads\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.3.0.jar-1=lib\\mysql-connector-j-9.3.0.jar
 includes=**
@@ -49,7 +51,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jbcrypt-0.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar-1}
+    ${file.reference.mysql-connector-j-9.3.0.jar-1}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
