--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -10,4 +10,4 @@ file.reference.mysql-connector-j-9.2.0.jar=D:\\Project PBO\\mysql-connector-j-9.
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ASUS X515E\\AppData\\Roaming\\NetBeans\\24\\build.properties
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\25\\build.properties
